Update header, sidemenu, logo and monres files

--- a/pub-new/welcome_main.html
+++ b/pub-new/welcome_main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GEIDEA ESB Framework</title>
+    <title>UnifAi ESB Framework</title>
     <link rel="stylesheet" href="css/isolution-design.css">
     <link rel="stylesheet" href="css/modern-welcome.css">
 </head>
@@ -11,7 +11,7 @@
     <!-- Hero Section -->
     <section class="welcome-hero">
         <div class="hero-content">
-            <h1 class="hero-title">GEIDEA ESB Framework</h1>
+            <h1 class="hero-title">UnifAi ESB Framework</h1>
             <p class="hero-subtitle">Enterprise Service Bus Monitoring & Management</p>
             <p class="hero-description">
                 A comprehensive monitoring solution that streamlines and optimizes your integration operations. 
