--- a/pub-new/welcome_monitoring.html
+++ b/pub-new/welcome_monitoring.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-	<title>GEIDEA ESB Framework</title>
+  <title>UnifAi ESB Framework</title>
 <script language=javascript>
 
 reqHREF = window.location.href;
