--- a/pub/welcome_main.html
+++ b/pub/welcome_main.html
@@ -2,13 +2,13 @@
 
 	<head>
 		<LINK REL="stylesheet" TYPE="text/css" HREF="webMethods.css">
-		<title>GEIDEA ESB Framework</title>
+		<title>UnifAi ESB Framework</title>
 		<!-- <base target="contents"> -->
 	</head>
 
 	<body bgcolor="#E6E6FA">
 		<br/>
-		<h1 align="center"><font color=#A80000><b>GEIDEA ESB Framework</b></font>
+		<h1 align="center"><font color=#A80000><b>UnifAi ESB Framework</b></font>
 		</h1>
 		<br><br><br>
 		<table width=100%>
