Update logout modal

--- a/pub/index.html
+++ b/pub/index.html
@@ -1,18 +1,156 @@
+<!DOCTYPE html>
 <html>
-
-<title>UnifAi ESB Framework</title>
-
-<script>
-
-<!-- master frameset-->
-document.writeln('<frameset rows="50,*" framespacing="0" spacing="0" border="0" frameborder="0">');
-	document.writeln('<frame name="banner" scrolling="no" target="contents" src="style.dsp" marginwidth="0" marginheight="0" border="0" noresize>');
-  	document.writeln('<frameset border="0" framespacing="0" spacing="0" frameborder="0">');
-  	document.writeln('<frame name="main" src="welcome_main.html" target="_self" scrolling="auto" marginwidth="0" marginheight="0">');
-  	document.writeln('</frameset>');
-document.writeln('</frameset>');
-
-</script>
-
-
+<head>
+  <title>UnifAi ESB Framework</title>
+  <meta http-equiv='Content-Type' content='text/html; charset=UTF-8'>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Product+Sans:wght@300;400;500;700&display=swap');
+    :root {
+      --primary-font: 'Product Sans', sans-serif;
+      --isolution-mid-blue: #0068c4;
+      --isolution-dark-gray: #585858;
+      --isolution-dark-red: #a61433;
+      --isolution-layout-border: #e2e9ed;
+    }
+    body {
+      margin: 0;
+      font-family: var(--primary-font);
+      background: #ebf1f7;
+      color: var(--isolution-dark-gray);
+    }
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: 50px;
+      padding: 0 10px;
+      background: #fff;
+      border-bottom: 1px solid var(--isolution-layout-border);
+    }
+    .header-content {
+      display: flex;
+      align-items: center;
+      gap: 14px;
+    }
+    .header-actions {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+    .spacer {
+      width: 1px;
+      height: 30px;
+      background: rgba(51, 51, 51, 0.2);
+    }
+    h1 {
+      font-weight: 700;
+      font-size: 16px;
+      color: var(--isolution-dark-gray);
+    }
+    .username {
+      font-size: 12px;
+      font-weight: 700;
+      color: var(--isolution-dark-gray);
+    }
+    .actions {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+    }
+    .action {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 36px;
+      height: 36px;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: all 0.2s ease;
+      border: 1px solid rgba(0, 0, 0, 0.2);
+    }
+    .action:hover {
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      transform: translateY(-1px);
+    }
+    .icon {
+      width: 18px;
+      height: 18px;
+      fill: var(--isolution-mid-blue);
+    }
+    .logout {
+      fill: var(--isolution-dark-red);
+    }
+    #main-content {
+      width: 100vw;
+      height: calc(100vh - 50px);
+      border: none;
+      display: block;
+    }
+    #logoutModal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(0,0,0,0.18);
+      z-index: 9999;
+      align-items: center;
+      justify-content: center;
+    }
+    #logoutModal .modal-content {
+      background: #fff;
+      border-radius: 16px;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.10);
+      padding: 32px 24px;
+      max-width: 340px;
+      width: 90vw;
+      margin: auto;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="header">
+    <div class="header-content">
+      <img src="images/unifai.svg" alt="Unifai Logo" style="height: 22px; width: auto;">
+      <div class="spacer"></div>
+      <h1>ESB Monitoring</h1>
+    </div>
+    <div class="header-actions">
+      <span style="font-size:12px; color: var(--isolution-dark-gray)">Welcome,&nbsp;</span>
+      <span class="username">User</span>
+      <div class="actions">
+        <a href="index.html" class="action" title="Home">
+          <svg class="icon" viewBox="0 0 24 24"><path d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg>
+        </a>
+        <a href="#" class="action logout-btn" title="Logout" onclick="showLogoutModal(); return false;">
+          <svg class="icon logout" viewBox="0 0 24 24"><path d="M16,17V14H9V10H16V7L21,12L16,17M14,2A2,2 0 0,1 16,4V6H14V4H5V20H14V18H16V20A2,2 0 0,1 14,22H5A2,2 0 0,1 3,20V4A2,2 0 0,1 5,2H14Z" /></svg>
+        </a>
+      </div>
+    </div>
+  </div>
+  <iframe id="main-content" name="main" src="welcome_main.html"></iframe>
+  <div id="logoutModal">
+    <div class="modal-content">
+      <h2 style="font-family:'Product Sans',sans-serif;font-size:20px;color:#003ca4;margin-bottom:18px;">Logout</h2>
+      <p style="font-size:15px;color:#444;margin-bottom:24px;">Are you sure you want to logout?</p>
+      <div style="display:flex;gap:16px;justify-content:center;">
+        <button onclick="hideLogoutModal()" style="padding:8px 18px;border-radius:6px;border:none;background:#003ca4;color:#fff;font-size:15px;cursor:pointer;">Cancel</button>
+        <button onclick="confirmLogout()" style="padding:8px 18px;border-radius:6px;border:none;background:#ffeaea;color:#a61433;font-size:15px;cursor:pointer;">Yes, log me out</button>
+      </div>
+    </div>
+  </div>
+  <script>
+    window.showLogoutModal = function() {
+      var modal = document.getElementById('logoutModal');
+      if (modal) modal.style.display = 'flex';
+    };
+    window.hideLogoutModal = function() {
+      var modal = document.getElementById('logoutModal');
+      if (modal) modal.style.display = 'none';
+    };
+    window.confirmLogout = function() {
+      window.location.href = 'WmRoot/top-logoff.dsp';
+    };
+  </script>
+</body>
 </html>
